[package]
name         = "yee-studio-web"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Yee Filter Studio — App.D.0 Dioxus (web) filter-design POC."

[[bin]]
name = "yee-studio-web"
path = "src/main.rs"

[dependencies]
# Dioxus web view layer (pure Rust → WASM real DOM + CSS). Pinned to the latest
# stable 0.6.x (ADR-0110). The `web` feature pulls the wasm renderer + the
# dioxus-web launcher used by `main`.
dioxus = { version = "0.6.3", features = ["web"] }

# Engine crates the POC drives live (all serde-only / WASM-safe — no egui,
# eframe, wgpu, FDTD or surrogate in the dep graph; ADR-0089/0099).
yee-synth  = { workspace = true }
yee-filter = { workspace = true }
yee-layout = { workspace = true }

[lints.rust]
unsafe_code  = "forbid"
missing_docs = "warn"
