[package]
name         = "yee-studio-web"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Yee Filter Studio — App.D.0 Dioxus (web) filter-design POC."

[[bin]]
name = "yee-studio-web"
path = "src/main.rs"

[dependencies]
# Dioxus web view layer (pure Rust → WASM real DOM + CSS). Pinned to the latest
# stable 0.6.x (ADR-0110). The `web` feature pulls the wasm renderer + the
# dioxus-web launcher used by `main`.
dioxus = { version = "0.6.3", features = ["web"] }

# Engine crates the studio drives live (all serde-only / WASM-safe — no egui,
# eframe, wgpu, FDTD or surrogate in the dep graph; ADR-0089/0099).
yee-synth  = { workspace = true }
yee-filter = { workspace = true }
yee-layout = { workspace = true }
# Manufacturing-file emitters (Gerber F.Cu + Edge.Cuts, KiCad .kicad_pcb). Pure
# text, depends only on `yee-layout` — WASM-safe, so the Export stage can emit
# the real files client-side (ADR-0089).
yee-export = { workspace = true }
# Touchstone renderer for the .s2p export (ADR-0171). Only the pure-string
# `yee_io::touchstone::to_string` emitter is used (std + num-complex, no fs in
# that path), so the Export stage can render a client-side .s2p on wasm32.
yee-io = { workspace = true }

# `num_complex::Complex64` for the (S11, S21) sweep the .s2p builder hands to the
# Touchstone renderer (the WASM-safe `yee_filter` response models return it).
num-complex = { workspace = true }

# Used to hand the (multi-line) export-file payload to the `dioxus::document::eval`
# download shim as structured JSON rather than escaping it into the script
# source. Already in the dependency graph via dioxus; WASM-safe.
serde_json = { workspace = true }

[lints.rust]
unsafe_code  = "forbid"
missing_docs = "warn"
