[package]
name         = "yee-studio"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Yee Filter Studio — egui-free StudioState logic layer (eframe view retired; App.D.2, ADR-0130)."

[[bin]]
name = "yee-studio"
path = "src/main.rs"

# The eframe/egui desktop+web view was retired in App.D.2 (ADR-0130): the
# pure-Rust Dioxus `yee-studio-web` is now THE studio. This crate keeps only the
# egui-free, WASM-safe `StudioState` logic layer (spec → synthesis → response →
# mask verdict → dimensioning), so the headless pipeline + its tests survive and
# remain reusable. There is no longer a windowing feature; the `[[bin]]` is a
# no-GUI stub that points users at the Dioxus studio.

[dependencies]
yee-synth  = { workspace = true }
yee-filter = { workspace = true }
# `yee-layout` supplies the `Substrate` model F1.2.0 dimensional synthesis sizes
# the filter onto. It is serde-only (no egui/eframe/wgpu, no FDTD), so the whole
# crate stays WASM-safe (ADR-0089/0099).
yee-layout = { workspace = true }

[lints.rust]
unsafe_code  = "forbid"
missing_docs = "warn"
