[package]
name         = "yee-validation"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Validation case aggregator for Yee electromagnetic simulation."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
yee-core    = { workspace = true }
yee-mom     = { workspace = true }
yee-fdtd    = { workspace = true }
yee-mesh    = { workspace = true }
yee-io      = { workspace = true }
num-complex = { workspace = true }
serde       = { workspace = true, features = ["derive"] }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
