[package]
name         = "yee-validation"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Validation case aggregator for Yee electromagnetic simulation."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
yee-core     = { workspace = true }
yee-mom      = { workspace = true }
yee-fdtd     = { workspace = true }
yee-fem      = { workspace = true }
yee-mesh     = { workspace = true }
yee-io       = { workspace = true }
yee-plotters = { workspace = true }
# Filter Phase F0.1 (ADR-0085): the synth-001/synth-002/filt-001 gate
# drivers recompute the F0 published-reference checks by calling into the
# pure-math synthesis crates.
yee-synth    = { workspace = true }
yee-filter   = { workspace = true }
# ADR-0104: the coupled-001 / dim-001 / gerber-001 aggregator gates
# re-exercise the shipped filter-design pipeline (coupled-line model,
# edge-coupled dimensioning, Gerber export) via these crates' public APIs.
yee-layout   = { workspace = true }
yee-export   = { workspace = true }
# Phase 3.nl.0 R6: the `nl-001` production gate consumes `DesignIntent`,
# the offline parser and the deterministic emitter from `yee-design`.
yee-design   = { workspace = true }
nalgebra     = { workspace = true }
# Phase 2.fdtd.7.z (Track UUUUUUUU): per-cell ε_r maps and per-component
# PEC masks for the rewired `fdtd-007` driver are constructed as
# `ndarray::Array3` and handed to the `yee_fdtd::YeeGrid::with_*`
# builders.
ndarray      = { workspace = true }
num-complex  = { workspace = true }
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
# `toml` parser for the canonical-prompts manifest at
# `crates/yee-design/validation/prompts.toml`. Already in the workspace
# lock via `yee-design` itself; declared here so the `nl_001` driver
# does not depend on `yee-design` re-exporting a parser surface.
toml         = "0.8"

[dev-dependencies]
# F1.2.1.0 (ADR-0157): the `bo-coupling-001` gate wires the EI/GP Bayesian
# optimizer (`yee_surrogate::minimize`) around the FEM coupling-k objective
# (`yee_fem::coupled_resonator_k`, already a dep) to refine a single
# inter-resonator gap with the EM in the loop. dev-only — the BO is exercised
# solely by the gate test, not by any production validation driver.
yee-surrogate = { workspace = true }

# Phase 4.fem.eig.3.5.1 R2 — CFS-PML grading-parameter ablation sweep
# binary. Runs locally (75 min worst-case in --release on the
# §4 ablation grid). Not a CI gate; the winning row's parameters land
# in `yee-fem::PmlConfig::default` via the R3 analysis.
[[example]]
name = "cfs_pml_grading_sweep"
path = "examples/cfs_pml_grading_sweep.rs"
